first isotope add functionality, update home isotopes table